[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = 'autopass'
version = '0.14'
requires-python = '>=3.8'
description = 'Entering password automatically for sudo, ssh and scp'
readme = 'README.md'
license = { file='LICENSE' }
keywords = ['sudo', 'ssh', 'scp', 'sshpass', 'password']
authors = [
  { name='xinlin-z', email='' },
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
]


[project.urls]
homepage = 'https://github.com/xinlin-z/autopass'

